Made it talk with frontend; Needs a deep dive on Persistence though, currently held by hopes and prayers